--- a/final.html
+++ b/final.html
@@ -3,64 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Swiss Chocolate</title>
-    <style>
-      .container {
-        width: 50%;
-        margin: auto;
-        text-align: center;
-        padding: 20px;
-        background-color: white;
-        border: 1px solid fuchsia;
-      }
-      footer {
-        font-size: 18px;
-        margin-top: 20px;
-      }
-      .learn-more {
-        display: block;
-        margin-top: 30px;
-        text-decoration: none;
-      }
-      button {
-        background-color: blue;
-        color: white;
-        border-radius: 10px;
-        padding: 10px 20px;
-        font-size: 15px;
-        cursor: pointer;
-        transition: all 200ms ease-in;
-      }
-      button:hover {
-        background-color: blueviolet;
-        color: black;
-      }
-      .content {
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin: 0 auto;
-      }
-      .line1 {
-        text-align: justify;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 15px;
-        line-height: 1.5;
-      }
-      .highlight {
-        color: purple;
-        background-color: blanchedalmond;
-      }
-      h1 {
-        text-align: center;
-        color: blue;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 30px;
-      }
-      h2 {
-        text-align: center;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
@@ -111,25 +55,6 @@
       <button>🍫Buy Some chocolate</button>
       <p class="footer">Article by Ann Kamau</p>
     </div>
-    <script>
-      function buyer() {
-        let name = prompt("What is your name?");
-        let email = prompt("Please enter your email address");
-        let age = prompt("How old are you?");
-
-        if (age <= 16) {
-          alert(
-            `Sorry ${name}, You need to be 18 to buy our chocolates.We'll be in touch via ${email}💝`
-          );
-        } else {
-          alert(
-            `Thank you ${name},Enjoy your order.We'll be in touch via ${email}🍫`
-          );
-        }
-      }
-
-      let buyButton = document.querySelector("button");
-      buyButton.addEventListener("click", buyer);
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
